--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
             Kitty Cat
         </p>
 
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.theguardian.com%2Flifeandstyle%2F2020%2Fsep%2F05%2Fwhat-cats-mean-by-miaow-japans-pet-guru-knows-just-what-your-feline-friend-wants&psig=AOvVaw0bu3oxP35wLBrjXbuw1IWO&ust=1641310051008000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCMi_0MbylfUCFQAAAAAdAAAAABAF">
+        <img src="https://static01.nyt.com/images/2021/09/14/science/07CAT-STRIPES/07CAT-STRIPES-mediumSquareAt3X-v2.jpg">
     
     </body>
 </html>
