--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
             Hey. I'm a <b>paragraph</b> element. Cool huh?
         </p>
 
-        <a href="https://google.com" target="blank" title="Let's go to google">Click me! I am a link!</a>
+        <a href="https://youtu.be/dQw4w9WgXcQ" target="blank" title="Let's go to google">Click me! I am a link!</a>
 
         <p>
             <!--the function <br> makes the sentence continue in a next line-->
