created a css file

--- a/style-test.html
+++ b/style-test.html
@@ -5,40 +5,8 @@
     <head>
         <title>Style test</title>
 
-        <!---style function can make some sentence i choosed to a specific style-->
-        <!-- .big means making a new class called big -->
-        <!-- .big.uppercase means sentences with both classes(big and uppercase) will have a specific style-->
-        <!-- the span element can just ignore all the style set before and do it's own function.
-        the h1 span means that it will only apply on h1 -->
-        <style type="text/css">
-
-            h1{
-                font-size: 30px;
-                color: salmon;
-            }
-
-            h2{
-                font-size: 20px;
-                color: green;
-            }
-            
-            .big{
-                font-size: 60px;
-            }
-           
-            .uppercase{
-                text-transform: uppercase
-            }
-
-            .big.uppercase{
-                color:navy;
-            }
-
-            h1 span{
-                 color: violet;
-            }
-
-        </style>
+        <!-- link function can link the style to the css file-->
+        <link rel="stylesheet" type="text/css" href="css/test.css">
 
     </head>
 
