wrote the css for our characters website (also changed some html)

--- a/style-test.html
+++ b/style-test.html
@@ -5,6 +5,8 @@
     <head>
         <title>Style test</title>
 
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">>
+
         <!-- link function can link the style to the css file-->
         <link rel="stylesheet" type="text/css" href="css/test.css">
 
