--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <title>Wrech-it Ralph</title>
-        <link rel="icon" href="https://lumiere-a.akamaihd.net/v1/images/ralph-headretina_f6ef0c9b.jpeg?region=0,0,450,450"">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/hero.css">
     </head>
 
     <body>
@@ -26,7 +27,7 @@
 
             <img src="https://ichef.bbci.co.uk/images/ic/1200x675/p06dwmg7.jpg">
 
-            <p>
+            <p class="caption">
                 Ralph and his friends
             </p>
             
