--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!--Footer element-->
         <footer>
             <p>
-                This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom</a> class.&copy; Rich
+                This site was created during a <a target="_blank" href="https://taptapkaboom.com">Tap Tap Kaboom</a> class.&copy; Ryan
             </p>
         </footer>
 
